<resources>
    <string name="app_name">AccSensor</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="new_register">New to Acc-Sensor? Register here</string>
    <string name="login">Login</string>
    <string name="empty_phone">Please enter phone number</string>
    <string name="empty_password">Please enter password</string>
    <string name="login_success">LOGIN SUCCESS!!!</string>
    <string name="login_failure">Failed to login.</string>
    <string name="register_phone">Phone</string>
    <string name="register_password">Password</string>
    <string name="registerAway">Register</string>
    <string name="alreadyAUser">Already has account! Login here</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="startDemo">Go Into Safety Mode</string>
    <string name="updateProfile">UpdateProfile</string>
    <string name="acceleration">Device Acceleration (m/s2)</string>
    <string name="sound">Sound (dB)</string>
    <string name="alert">Sending SOS in </string>
    <string name="slideLeft">Slide Left If You Are Ok</string>
    <string name="name">Name </string>
    <string name="age">Age </string>
    <string name="gender">Gender </string>
    <string name="address">Address </string>
    <string name="econtact1Name">Emergency Contact 1 Name </string>
    <string name="econtact1Phone">Emergency Contact 1 Phone </string>
    <string name="econtact1Email">Emergency Contact 1 Email </string>
    <string name="econtact2Name">Emergency Contact 2 Name </string>
    <string name="econtact2Phone">Emergency Contact 2 Phone </string>
    <string name="econtact2Email">Emergency Contact 2 Email </string>
    <string name="econtact3Name">Emergency Contact 3 Name </string>
    <string name="econtact3Phone">Emergency Contact 3 Phone </string>
    <string name="econtact3Email">Emergency Contact 3 Email </string>
    <string name="updateConfirm">Update</string>
    <string name="updateCancel">Cancel</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detector">DetectorActivity</string>
    <string name="title_activity_update_profile">UpdateProfileActivity</string>
</resources>
